src/pages/home/wgts/slider/index.scss
/**
 * Copyright © ShopeX （http://www.shopex.cn）. All rights reserved.
 * See LICENSE file for license details.
 */

.wgt-slider {
  box-sizing: border-box;
  position: relative;
  width: 100%;

  .slider-img {
    width: 100%;
    height: 100%;
  }

  .slider-item {
    position: relative;
    
    .wrapper-img {
      position: relative;
      width: 100%;
      height: 100%;
      
      .slider-item__img {
        width: 100%;
        height: 100%;
        display: block;
      }
      
      .slider-video {
        width: 100%;
        height: 100%;
        display: block;
        background-color: transparent;

        video {
          background-color: transparent;
        }
        
        .poster {
          width: 100%;
          height: 100%;
          object-fit: cover;
        }
      }
      
      // 热区样式
      .img-hotzone_zone {
        position: absolute;
        z-index: 9;
        cursor: pointer;
      }
      
      // 覆盖层样式
      .overlay-content {
        position: absolute;
        z-index: 10;
        pointer-events: auto;
        transition: opacity 0.3s ease-in-out;
        
        &.overlay-visible {
          opacity: 1;
        }
        
        &.overlay-hidden {
          opacity: 0;
          pointer-events: none;
        }
        
        .over-lay {
          width: 100%;
          display: block;
        }
      }
    }
  }

  .slider-pagination {
    position: absolute;
    bottom: 20px;
    z-index: 200;
    box-sizing: border-box;
    padding: 20px;
    display: flex;
    left: 0;
    right: 0;

    &.cover {
      bottom: 0px;
    }

    &.left {
      justify-content: flex-start;
    }

    &.center {
      justify-content: center;
    }

    &.right {
      justify-content: flex-end;
    }

    &.dark {
      .dot-item {
        background: rgba(0, 0, 0, 0.4);
      }

      .pagination-count {
        background: rgba(0, 0, 0, 0.4);
        color: #fff;
      }
    }

    &.light {
      .dot-item {
        background: rgba(255, 255, 255, 0.7);
      }

      .pagination-count {
        background: rgba(255, 255, 255, 0.7);
        color: #555;
      }
    }

    &.rectangle {
      .dot-item {
        width: 32px;
        height: 4px;
        margin: 0 4px;
        border-radius: 2px;

        &.active {
          background: var(--color-primary);
        }
      }

      .pagination-count {
        height: 40px;
        font-size: 24px;
        line-height: 40px;
        padding: 0 6px;
      }
    }

    &.circle {
      .dot-item {
        width: 16px;
        height: 16px;
        border-radius: 8px;
        background: rgba(0, 0, 0, 0.4);
        margin: 0 6px;

        &.active {
          background: var(--color-primary);
        }
      }

      .pagination-count {
        width: 50px;
        height: 50px;
        font-size: 24px;
        border-radius: 25px;
        display: flex;
        justify-content: center;
        align-items: center;
      }
    }
  }
}

